test/functions/iterators/multilocale/multilocSerIter-noinline.good
multilocSerIter-noinline.chpl:7: error: 'yield' statements within 'on' clauses are not currently supported for iterators that are not inlined (e.g., within zippered loops)
